# motionpaper

./: README.md  daemon.sh  gui.py  install.sh  install_to_desktop.sh  launch.sh  main.py  pyproject.toml  uninstaller.sh
config/: themes.json
desktop/: motionpaper-daemon.desktop  motionpaper.desktop
motionpaper/: __init__.py  config_store.py  constants.py  daemon_control.py  daemon_runtime.py  gui_helpers.py  installer.py  romanization.py  uninstaller.py  wallpaper_library.py
scripts/: install_desktop_entries.sh  launch_daemon.sh  launch_gui.sh
